# MechanicEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
Source/Example/ExVulkan/: CMakeLists.txt  main.cpp
Source/MechanicEngine/: CMakeLists.txt
Source/MechanicEngine/Include/Application/: Application.h  EntryPoint.h  Layer.h
Source/MechanicEngine/Include/Core/: Assert.h  Core.h  Logging.h  PlatformDetection.h  Ptr.h  Time.h  Timestep.h
Source/MechanicEngine/Include/Event/: ApplicationEvent.h  Event.h  EventUtils.h  Input.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Source/MechanicEngine/Include/FileSystem/: FileReader.h
Source/MechanicEngine/Include/Math/: Math.h
Source/MechanicEngine/Include/Media/: ImageLoader.h  ImageStruct.h  MediaEnumToStr.h  MediaPixFmt.h
Source/MechanicEngine/Include/Render/: GraphicsPass.h  RHI.h  RHIBuffer.h  RHICommandBuffer.h  RHIDescriptorSet.h  RHIEnums.h  RHIFramebuffer.h  RHIPipeline.h  RHIPipelineBarrier.h  RHIPixelFormat.h  RHIRenderPass.h  RHIResources.h  RHISampler.h  RHIShaders.h  RHIStruct.h  RHISwapchain.h  RHITexture.h  RHITransition.h  RenderPass.h
Source/MechanicEngine/Include/Window/: Window.h
Source/MechanicEngine/Source/Application/: AppLog.h  Application.cpp  EntryPoint.cpp  Layer.cpp  LayerStack.cpp  LayerStack.h
Source/MechanicEngine/Source/Core/: Assert.cpp  Core.cpp  Logging.cpp  LoggingImpl.cpp  LoggingImpl.h  Ptr.cpp  Time.cpp  Timestep.cpp
Source/MechanicEngine/Source/Event/: ApplicationEvent.cpp  Event.cpp  EventUtils.cpp  Input.cpp  KeyCodes.cpp  KeyEvent.cpp  MouseCodes.cpp  MouseEvent.cpp
Source/MechanicEngine/Source/FileSystem/: FileReader.cpp
Source/MechanicEngine/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLog.cpp  ImGuiLog.h  ImGuiRenderPass.cpp  ImGuiRenderPass.h  ImGuiRenderer.cpp  ImGuiRenderer.h
Source/MechanicEngine/Source/ImGui/Vulkan/: VulkanImGuiLayer.cpp  VulkanImGuiLayer.h
Source/MechanicEngine/Source/Math/: Math.cpp
Source/MechanicEngine/Source/Media/: ImageLoader.cpp  ImageLoaderImpl.cpp  ImageLoaderImpl.h  ImageStruct.cpp  ImageUtils.cpp  ImageUtils.h  MediaEnumToStr.cpp  MediaLog.cpp  MediaLog.h  MediaPixFmt.cpp
Source/MechanicEngine/Source/Render/: GraphicsPass.cpp  RHI.cpp  RHIBuffer.cpp  RHICommandBuffer.cpp  RHIDescriptorSet.cpp  RHIEnums.cpp  RHIFramebuffer.cpp  RHIPipeline.cpp  RHIPipelineBarrier.cpp  RHIPixelFormat.cpp  RHIRenderPass.cpp  RHIResources.cpp  RHISampler.cpp  RHIShaders.cpp  RHIStruct.cpp  RHISwapchain.cpp  RHITexture.cpp  RHITransition.cpp  RenderLog.cpp  RenderLog.h  RenderPass.cpp
Source/MechanicEngine/Source/Render/Vulkan/: VulkanRHI.cpp  VulkanRHI.h  VulkanRHIBuffer.cpp  VulkanRHIBuffer.h  VulkanRHICommandBuffer.cpp  VulkanRHICommandBuffer.h  VulkanRHIDescriptorSet.cpp  VulkanRHIDescriptorSet.h  VulkanRHIFramebuffer.cpp  VulkanRHIFramebuffer.h  VulkanRHIPipeline.cpp  VulkanRHIPipeline.h  VulkanRHIRenderPass.cpp  VulkanRHIRenderPass.h  VulkanRHIResources.cpp  VulkanRHIResources.h  VulkanRHISampler.cpp  VulkanRHISampler.h  VulkanRHIShaders.cpp  VulkanRHIShaders.h  VulkanRHITexture.cpp  VulkanRHITexture.h  VulkanRHIUtils.cpp  VulkanRHIUtils.h  VulkanWrapper.cpp  VulkanWrapper.h
Source/MechanicEngine/Source/Window/: GlfwUtils.cpp  GlfwUtils.h  Window.cpp  WindowLog.cpp  WindowLog.h
Source/MechanicEngine/Source/Window/Apple/: AppleVulkanWindow.cpp  AppleVulkanWindow.h
Source/MechanicEngine/Source/Window/Windows/: WindowsVulkanWindow.cpp  WindowsVulkanWindow.h
Source/MechanicPic/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  MechanicPic.cpp  MechanicPic.h  MechanicPicLog.cpp  MechanicPicLog.h  PicRenderer.cpp  PicRenderer.h
(+52 files in other folders)
